frontend design finished, backend almost finished
