# baas-employee/src/main/java/scotiapay/baas_employee/entities/CityEntity.java
@@ -1,0 +1,27 @@
+package scotiapay.baas_employee.entities;
+
+import lombok.Getter;
+import lombok.Setter;
+
+import javax.persistence.*;
+import java.util.UUID;
+
+@Entity
+@Table(name = "city")
+@Getter
+@Setter
+public class CityEntity {
+
+    @Id
+    @GeneratedValue(generator = "UUID")
+    @Column(name = "id", updatable = false, nullable = false)
+    private UUID id;
+
+    @Column(name = "name", nullable = false, length = 100)
+    private String name;
+
+    @ManyToOne(fetch = FetchType.LAZY)
+    @JoinColumn(name = "region_id", nullable = false)
+    private RegionEntity regionEntity;
+
+}
